loose fb and black titles

--- a/_data/template.yml
+++ b/_data/template.yml
@@ -13,5 +13,4 @@ social:
 logo:
   img: "/img/logo.png"
 description:
-  footer: Tour de Paris et de ses créateurs indépendants, bijoux, accessoires et déco.
-    Bienvenue !
+  footer: Les Petits Hugues <br> Histoire(s) de créer.
